# compilers_project

./: .gitignore  CMakeLists.txt  README.md  input.txt  output.txt
era/: CMakeLists.txt  input.txt  main.cpp  output.txt
src/: main.cpp  process.cpp  process.h
src/instructions/: ADDInstruction.h  ANDInstruction.h  ASLInstruction.h  ASRInstruction.h  CBRInstruction.h  CNDInstruction.h  DataInstruction.h  DefaultInstruction.h  Instruction.h  LDAInstruction.h  LDCInstruction.h  LDInstruction.h  LSLInstruction.h  LSRInstruction.h  MOVInstruction.h  NOPInstruction.h  ORInstruction.h  STInstruction.h  STOPInstruction.h  SUBInstruction.h  XORInstruction.h
src/instructions/impl/: ADDInstruction.cpp  ANDInstruction.cpp  ASLInstruction.cpp  ASRInstruction.cpp  CBRInstruction.cpp  CNDInstruction.cpp  DataInstruction.cpp  DefaultInstruction.cpp  Instruction.cpp  LDAInstruction.cpp  LDCInstruction.cpp  LDInstruction.cpp  LSLInstruction.cpp  LSRInstruction.cpp  MOVInstruction.cpp  NOPInstruction.cpp  ORInstruction.cpp  STInstruction.cpp  STOPInstruction.cpp  SUBInstruction.cpp  XORInstruction.cpp
src/instructions/utill/: Operator.h  TYPE.h
src/instructions/utill/impl/: Operator.cpp
test/: CMakeLists.txt  test_add.cpp  test_all.cpp  test_and.cpp  test_asl.cpp  test_asr.cpp  test_cbr.cpp  test_cnd.cpp  test_label_and_data.cpp  test_ld.cpp  test_lda.cpp  test_ldc.cpp  test_lsl.cpp  test_lsr.cpp  test_mov.cpp  test_or.cpp  test_st.cpp  test_sub.cpp  test_xor.cpp
